vim (2:8.0.0646-1) UNRELEASED; urgency=medium

  [ upstream ]
  * 8.0.0210 et.al.: Add support for bracketed paste.  (Closes: #504244)
  * 8.0.0421: Fix display in diff mode when adding a line at the end of a
    buffer.  (Closes: #846993)

  [ James McCoy ]
  * vim-policy:
    + Specify the "addon", not "name", field is used to declare the addon.
      Thanks to Reiner Herrmann.

 -- James McCoy <jamessan@debian.org>  Sat, 17 Jun 2017 21:51:10 -0400

vim (2:8.0.0197-4) unstable; urgency=medium

  * Backport upstream patch v8.0.0550 to fix a regression in tag lookups for
    ctags-generated emacs style tags files.  (Closes: #859426)
  * Add Artful Aardvark, jessie-backports-sloppy, and
    stretch-backports/security to deb{changelog,sources} syntax files.
  * debsources.vim: Require word boundaries around distribution name.
    (Closes: #859247)
  * Set $TERM to a known sane value when running tests to avoid test failures
    due to an unknown $TERM.

 -- James McCoy <jamessan@debian.org>  Sun, 23 Apr 2017 08:10:29 -0400

vim (2:8.0.0197-3) unstable; urgency=high

  * Backport upstream patches v8.0.0377 & v8.0.0378, to fix buffer overflows
    when reading corrupted undo files.  (Closes: #856266, CVE-2017-6349,
    CVE-2017-6350)

 -- James McCoy <jamessan@debian.org>  Mon, 06 Mar 2017 22:33:23 -0500

vim (2:8.0.0197-2) unstable; urgency=high

  * Backport upstream patch v8.0.0322, to fix buffer overflow if a spellfile
    has an invalid length in it.  (Closes: #854969, CVE-2017-5953)

 -- James McCoy <jamessan@debian.org>  Sun, 12 Feb 2017 19:56:16 -0500

vim (2:8.0.0197-1) unstable; urgency=medium

  [ upstream ]
  * 8.0.0190: Improve performance of tag lookup  (Closes: #673130)

 -- James McCoy <jamessan@debian.org>  Mon, 16 Jan 2017 20:26:10 -0500

vim (2:8.0.0134-1) unstable; urgency=medium

  * Merge upstream tag v8.0.0134
  * Bump minimum version of debhelper for --dbgsym-migration option.  (Closes:
    #846183)