@@ -9,6 +9,9 @@ vim (2:8.0.0646-1) UNRELEASED; urgency=medium
   * vim-policy:
     + Specify the "addon", not "name", field is used to declare the addon.
       Thanks to Reiner Herrmann.
+  * Merge changes from Ubuntu, dependent on DEB_VENDOR=Ubuntu:
+    + Remove --disable-python3interp on Ubuntu for vim-basic
+    + Disable ruby for vim-gtk3
 
  -- James McCoy <jamessan@debian.org>  Sat, 17 Jun 2017 21:51:10 -0400
 
